# autopresspdf

./: README.md  ap.py  pyproject.toml
src/: autopresspdf.py  data_types.py  presser.py  utils.py
