[tool.poetry]
name = "autopresspdf"
version = "0.1.0"
description = "Optimize, split, and auto-fix your PDFs effortlessly with AutoPressPDF—the smart CLI tool for navigating size restrictions without sacrificing quality."
authors = ["Jordan Dimov <jdimov@a115.co.uk>"]
license = "Creative Commons"
readme = "README.md"
packages = [
  { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = "^0.9.0"
pypdf2 = "^3.0.1"
pysimplegui = "^4.60.5"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = "^0.0.286"
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
